# Lu4-dsp

./: .env  .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  QWEN.md  SpectrogramPipeline.json  main.cpp  pipeline.json  server.py  variables.toml
.qwen/: settings.json
Core/: CMakeLists.txt
Core/include/: Conveyor.hpp  ConveyorFactory.hpp  ConveyorOrchestrator.hpp  JsonReader.hpp  ModuleFactory.hpp
Core/src/: CheckGpu.cpp  Conveyor.cpp  ConveyorFactory.cpp  ConveyorOrchestrator.cpp  JsonReader.cpp  ModuleFactory.cpp
DataContainers/: CMakeLists.txt
DataContainers/include/: CpuByteSignal.hpp  CpuComplexSignal.hpp  CpuFloatSignal.hpp  EmptyContainer.hpp  GpuByteSignal.hpp  GpuComplexSignal.hpp  GpuFloatSignal.hpp  GpuSignal.hpp  GpuSignalUtils.hpp  IData.hpp  IGpuSignalData.hpp
DataContainers/src/: CpuByteSignal.cpp  CpuComplexSignal.cpp  CpuFloatSignal.cpp  GpuComplexSignal.cpp  GpuFloatSignal.cpp  GpuSignal.cpp
Module/: CMakeLists.txt
Module/include/: IModule.hpp  IVirtualRX.hpp  IVirtualRxModule.hpp  ModuleMetaData.hpp  Variables.hpp  VariablesResolve.hpp  VirtualRX.hpp  VirtualTransmitter.hpp  logger.hpp
Module/src/: IModule.cpp  IVirtualRX.cpp  IVirtualRxModule.cpp  ModuleMetaData.cpp  VirtualRX.cpp  VirtualTransmitter.cpp  Vаriables.cpp
Modules/: module.hpp
Modules/BandPassCompute/: CMakeLists.txt  README.md  module.json
Modules/BandPassCompute/include/: BandPassCompute.hpp
Modules/BandPassCompute/src/: BandPassCompute.cpp
Modules/BandPassComputeComplex/: CMakeLists.txt  README.md  module.json
Modules/BandPassComputeComplex/include/: BandPassComputeComplex.hpp
Modules/BandPassComputeComplex/src/: BandPassComputeComplex.cpp
Modules/BandPassFilterCompute/: CMakeLists.txt
Modules/BitPacker/: CMakeLists.txt  README.md  module.json
Modules/BitPacker/include/: BitPacker.hpp
Modules/BitPacker/src/: BitPacker.cpp  BitPackerCuda.cu
Modules/BitPacker/tests/: CMakeLists.txt  bit_packer_tests.cpp
Modules/CS2AS/: CMakeLists.txt  README.md  module.json
Modules/CS2AS/include/: CS2AS.hpp
Modules/CS2AS/src/: SC2AS.cpp
Modules/CarrierPhaseEstimator/: CMakeLists.txt  README.md  module.json
Modules/CarrierPhaseEstimator/include/: CarrierPhaseEstimator.hpp
Modules/CarrierPhaseEstimator/src/: CarrierPhaseEstimator.cpp  (+1 more)
Modules/CarrierPhaseEstimator/tests/: CMakeLists.txt  carrier_phase_estimator_tests.cpp
Modules/CarrierRecovery/: CMakeLists.txt  README.md  module.json
Modules/Decimator/: CMakeLists.txt  README.md  module.json
Modules/Decimator/tests/: CMakeLists.txt  decimator_tests.cpp
Modules/FFT/: CMakeLists.txt  README.md  module.json
Modules/FFT/include/: FFT_cufft.hpp  FFT_overlap_callback.hpp  FFT_overlap_impl.hpp  fftUtils.hpp
Modules/FFT/src/: FFT_cufft.cpp  FFT_overlap_callback.cu  FFT_overlap_complex_impl.cpp  FFT_overlap_impl.cpp  FFT_overlap_real_impl.cpp  example_fft_overlap.cpp
Modules/FFT_Shift/: CMakeLists.txt  README.md  module.json
Modules/FIR-filter/: CMakeLists.txt  README.md  module.json
Modules/FIR-filter/include/: FIR_filter.hpp
Modules/FIR-filter/src/: FIR_filter.cpp  filter_kernal.cu
Modules/FileSrc/: CMakeLists.txt  README.md  module.json
Modules/FileSrc/include/: FileSrc.hpp
Modules/FileSrc/src/: FileSrc.cpp
Modules/FileWriter/: CMakeLists.txt  README.md  module.json
Modules/FileWriter/include/: FileWriter.hpp
Modules/FileWriter/src/: FileWriter.cpp
Modules/PhaseRotator/: CMakeLists.txt  README.md  module.json
Modules/PhaseRotator/tests/: CMakeLists.txt  phase_rotator_tests.cpp
Modules/QPSKDecision/: CMakeLists.txt  README.md  module.json
Modules/QPSKDecision/include/: QPSKDecision.hpp
Modules/QPSKDecision/src/: QPSKDecision.cpp  QPSKDecisionCuda.cu
Modules/QPSKDecision/tests/: CMakeLists.txt  qpsk_decision_tests.cpp
Modules/RRCCompute/: CMakeLists.txt  README.md  module.json
Modules/RRCCompute/tests/: CMakeLists.txt  rrc_compute_tests.cpp
Modules/SignalPlot/: CMakeLists.txt
Modules/SignalPlot/include/: SignalPlot.hpp
Modules/SignalPlot/src/: SignalPlot.cpp
Modules/SpectrogramPlot/: CMakeLists.txt  README.md  module.json
Modules/SpectrogramPlot/include/: SpectrogramPlot.hpp
Modules/SpectrogramPlot/src/: SpectrogramPlot.cpp  SpectrogramPlotCuda.cu
Modules/SumReduce/: CMakeLists.txt  README.md  module.json
Modules/SumReduce/include/: SumReduce.hpp
Modules/SumReduce/src/: SumReduce.cu
Modules/TextFileWriter/: CMakeLists.txt  README.md  module.json
Modules/TextFileWriter/tests/: CMakeLists.txt  text_file_writer_tests.cpp
Modules/VirtualRX/: CMakeLists.txt  README.md  module.json
Modules/VirtualTX/: CMakeLists.txt  README.md  module.json
Modules/VirtualTransmitter/: CMakeLists.txt
docs/: core.md  data_containers.md  modules.md  qpsk_pipeline.md  server_api.md  spectrogram_pipeline.md  virtual_transmitter.md
docs/images/: core_class.puml  core_sequence.puml  data_containers_class.puml  modules_class.puml  virtual_transmitter_activity.puml
docs/quml/: core_class.puml  core_sequence.puml  data_containers_class.puml  modules_class.puml  virtual_transmitter_activity.puml
include/: Conveyor.hpp  CpuFloatSignal.hpp  GpuFloatSignal.hpp  IData.hpp  IModule.hpp  ModuleFactory.hpp  ModuleMetaData.hpp  RedisClient.hpp  logger.hpp
server/: server.py
src/: Conveyor.cpp  CpuFloatSignal.cpp  GpuFloatSignal.cpp  ModuleFactory.cpp  RedisClient.cpp  main.cpp
tests/: CMakeLists.txt  benchmark.py  benchmark_results.csv  data_container_copy_tests.cpp  fetch_param_tests.cpp  qpsk_mvp_tests.cpp  rrc_compute_tests.cpp  spectrogram_e2e_tests.cpp  virtual_tx_rx_tests.cpp
tests/TestData/pipelines/: qpsk_ideal_128.json  qpsk_rrc_128.json
tests/TestData/signals/: qpsk_ideal_message.txt  qpsk_rrc_message.txt
uml/: architecture_overview.puml  core.puml  data_containers.puml  module.puml.txt  module_interfaces.puml  servePackages.puml.txt
utils/: AMCgenerate.py  AMgenerate.py  CreateModuleDir.sh  FMgenerate.py  add_noise.py  deiagnostic.py  qpsk_generator.py  signal_viewer.py  sinGenerate.py  updateModule.py
(+25 files in other folders)
